Added the /occ endpoint. Cleaned up other endpoint definitions.
