# controllers/default_controller.py
@@ -2,6 +2,9 @@
 def age(occId = None, siteId = None) -> str:
     return 'do some magic!'
 
+def occ(bbox = None, minAge = None, maxAge = None, ageScale = None, timeRule = None, taxon = None, includeLower = None, limit = None, offset = None) -> str:
+    return 'do some magic!'
+
 def pub(occId = None, siteId = None, format = None) -> str:
     return 'do some magic!'
 
