# swagger/swagger.yaml
@@ -54,6 +54,98 @@ paths:
             $ref: "#/definitions/errorModel"
       x-tags:
       - tag: "default"
+  /occ:
+    get:
+      tags:
+      - "default"
+      summary: "Fossil occurrences in a specific place and time"
+      description: "Return fossil occurrences from the Paleobiology (PBDB) and Neotoma\
+        \ Databases."
+      operationId: "controllers.default_controller.occ"
+      produces:
+      - "application/json"
+      - "application/xml"
+      - "text/xml"
+      - "text/html"
+      parameters:
+      - name: "bbox"
+        in: "query"
+        description: "Bounding box definition, either as a numeric vector of form\
+          \ [lonW, latS, lonE, latN] or as structured WKT text"
+        required: false
+        type: "string"
+      - name: "min_age"
+        in: "query"
+        description: "The most recent age for the temporal search window. By default\
+          \ the min_age is  present, or not used in queries. Units are millions of\
+          \ years ago, unless defined using age_scale"
+        required: false
+        type: "number"
+        format: "double"
+      - name: "max_age"
+        in: "query"
+        description: "The oldest age for the temporal search window. Units are millions\
+          \ of years ago, unless defined using age_scale"
+        required: false
+        type: "number"
+        format: "double"
+      - name: "age_scale"
+        in: "query"
+        description: "The units for max_age and min_age. Allowable units are yr, kyr\
+          \ or Myr"
+        required: false
+        type: "string"
+      - name: "time_rule"
+        in: "query"
+        description: "Control the application of the temporal bounding box. May choose\
+          \ one of three rules, contain, all samples must be fully within the temporal\
+          \ bounding box; major, more than half of an occurrences temporal uncertainty\
+          \ must be within the bounding box; overlap, any portion of an occurrence\
+          \ may be withing the bounding box"
+        required: false
+        type: "string"
+      - name: "taxon"
+        in: "query"
+        description: "Taxonomic name. May be truncated, a list of taxa or use wildcards.\
+          \ If a specific taxon ID or a vector of IDs is known that parameter can\
+          \ be passed through taxon. Taxon lists must be passed using JSON formating.\
+          \ By default, returns only taxa named in the query. Use include_lower if\
+          \ all lower taxa are desired"
+        required: false
+        type: "string"
+      - name: "include_lower"
+        in: "query"
+        description: "Retrieve lower taxa. A boolean. If TRUE, all species and subspecies\
+          \ of a named genera will be included in the response"
+        required: false
+        type: "boolean"
+      - name: "limit"
+        in: "query"
+        description: "Limit the number of records in the response for large queries"
+        required: false
+        type: "integer"
+        format: "int32"
+      - name: "offset"
+        in: "query"
+        description: "Begin the response from a designated point within the larger\
+          \ query. In this way, <i>limit</i> and <i>offset</i> can be used to produce\
+          \ serial queries to the API to avoid issues with larger responses"
+        required: false
+        type: "integer"
+        format: "int32"
+      responses:
+        200:
+          description: "publication response"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/publication"
+        default:
+          description: "unexpected error"
+          schema:
+            $ref: "#/definitions/errorModel"
+      x-tags:
+      - tag: "default"
   /pub:
     get:
       tags:
@@ -84,7 +176,7 @@ paths:
         in: "query"
         description: "Output format for publications. Default response is BibJSON,\
           \ however many publications are not formatted properly for BibJSON, and\
-          \ so caution should be exercised.  Response may be bibJSON or APA"
+          \ so caution should be exercised. Response may be bibJSON or APA"
         required: false
         type: "string"
       responses:
@@ -104,7 +196,7 @@ paths:
     get:
       tags:
       - "default"
-      summary: "Sample sites or localities."
+      summary: "Sample sites or localities"
       description: "Return sampling locations in space and time, excluding occurrence\
         \ records. This may return multiple stes from a common spatial location if\
         \ the samples from the synthetic sites represent unique collections. This\
@@ -244,7 +336,7 @@ definitions:
         type: "integer"
         format: "int32"
         description: "Unique identifier for a specific publication from the respective\
-          \ databases.  Neotoma publications are prepended with ndb and PBDB publications\
+          \ databases. Neotoma publications are prepended with ndb and PBDB publications\
           \ are prepended with pdb"
       pub:
         type: "string"
@@ -274,6 +366,16 @@ definitions:
   age_basis:
     type: "string"
     description: "Basis of age estimate for the given site or occurence"
+  occurrence:
+    type: "object"
+    properties:
+      occ_id:
+        type: "integer"
+        format: "int32"
+        description: "Unique occurrence ID"
+      taxon:
+        type: "string"
+        description: "Taxonomic name"
   errorModel:
     type: "object"
     required:
